# ROC

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: Orbit.c  celestial_body.c  error.c  error.h  error_enums.c  global_typedefs.c  main.c  orbit.c  orbital_mechanics.c  planets.c  test.c
